feat: добавить корзину в навбар

--- a/src/app/components/nav-component/nav-component.component.html
+++ b/src/app/components/nav-component/nav-component.component.html
@@ -7,11 +7,16 @@
       <div class="grid">
         <div class="content-router-container">
           <ul class="items-routing">
-            <li><a>Пицца</a></li>
-            <li><a>Закуски</a></li>
-            <li><a>Напитки</a></li>
-            <li><a>Контакты</a></li>
-            <li><a>О нас</a></li>
+            <div class="routing">
+              <li><a>Пицца</a></li>
+              <li><a>Закуски</a></li>
+              <li><a>Напитки</a></li>
+              <li><a>Контакты</a></li>
+              <li><a>О нас</a></li>
+            </div>
+            <div class="basket-container">
+              <button class="basket">Корзина</button>
+            </div>
           </ul>
         </div>
       </div>
