feat: добавить основные компоненты страницы

--- a/src/app/components/root-app-component/root-app-component.component.html
+++ b/src/app/components/root-app-component/root-app-component.component.html
@@ -2,8 +2,8 @@
   <nav class="navbar">
     <app-nav-component></app-nav-component>
   </nav>
-  <div>2</div>
-  <div>3</div>
+  <div><app-item-main></app-item-main></div>
+  <div><app-footer></app-footer></div>
 </div>
 
 <router-outlet></router-outlet>
