--- a/src/app/components/nav-component/nav-component.component.scss
+++ b/src/app/components/nav-component/nav-component.component.scss
@@ -7,6 +7,7 @@
   height: 200px;
   width: 100%;
 }
+
 .navbar {
   display: grid;
   grid-auto-rows: 80px 80px;
@@ -24,7 +25,6 @@
   display: grid;
   width: 960px;
   height: 100%;
-
 }
 
 .content-router-container {
@@ -49,7 +49,7 @@ ul.items-routing li {
   cursor: pointer;
 }
 
-ul.items-routing li:hover{
+ul.items-routing li:hover {
   color: orange;
 }
 
@@ -62,4 +62,33 @@ ul.items-routing li:hover{
   border: none;
   border-radius: 9999px;
   cursor: pointer;
+}
+
+// верхний навбар
+.top-navbar {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.grid-top-nav {
+  display: flex;
+  justify-content: space-between;
+  width: 960px;
+}
+
+.btn-reg {
+  padding: 8px 16px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  border-radius: 9999px;
+  font-weight: 500;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition-property: background-color, color;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
 }
