--- a/src/app/components/root-app-component/root-app-component.component.scss
+++ b/src/app/components/root-app-component/root-app-component.component.scss
@@ -2,7 +2,7 @@
   max-height: 100%;
   max-width: 100%;
   display: grid;
-  background-color: aqua;
+  background-color: #fff;
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr 3fr 1fr;
   position: relative;
