feat: добавить компоненты товаров

--- a/src/app/components/item-main/item-main.component.html
+++ b/src/app/components/item-main/item-main.component.html
@@ -1,1 +1,10 @@
 <p>item-main works!</p>
+<div>
+  <app-pizza></app-pizza>
+</div>
+<div>
+  <app-snacks></app-snacks>
+</div>
+<div>
+  <app-drink></app-drink>
+</div>
