--- a/src/app/components/root-app-component/root-app-component.component.scss
+++ b/src/app/components/root-app-component/root-app-component.component.scss
@@ -8,3 +8,31 @@
   position: relative;
   overflow: hidden;
 }
+
+.top-navbar {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.grid-top-nav {
+  display: flex;
+  justify-content: space-between;
+  width: 960px;
+}
+
+.btn-reg {
+  padding: 8px 16px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  border-radius: 9999px;
+  font-weight: 500;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition-property: background-color, color;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
+}
