--- a/src/app/components/root-app-component/root-app-component.component.html
+++ b/src/app/components/root-app-component/root-app-component.component.html
@@ -8,6 +8,9 @@
         <div class="btn-top-nav">
           <button class="btn-reg" routerLink="auth" (click)="changeAuth()">Войти</button>
         </div>
+        <div class="btn-top-nav">
+          <button class="btn-reg" routerLink="auth" (click)="changeAuth()">Войти</button>
+        </div>
       </div>
     </nav>
     <app-nav-component></app-nav-component>
